crates/ty_python_semantic/resources/mdtest/snapshots/1._no_matching_overload…_-_2._No_matching_overload…_-_3._Calls_to_overloaded_….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. no_matching_overload… - 2. No matching overload… - 3. Calls to overloaded …
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/no_matching_overload.md
---

# Python source files

## mdtest_snippet.py

```
1 | type("Foo", ())  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of class `type` matches arguments
 --> src/mdtest_snippet.py:1:1
  |
1 | type("Foo", ())  # error: [no-matching-overload]
  | ^^^^^^^^^^^^^^^
  |
info: rule `no-matching-overload` is enabled by default

```
