crates/ty_python_semantic/resources/mdtest/snapshots/1._unpacking.md_-_2._Unpacking_-_5._Exactly_too_few_valu….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. unpacking.md - 2. Unpacking - 5. Exactly too few valu…
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = (1,)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Not enough values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | a, b = (1,)  # error: [invalid-assignment]
  | ^^^^   ---- Got 1
  | |
  | Expected 2
  |
info: rule `invalid-assignment` is enabled by default

```
